.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/missingReturnYieldStarFnUntraced.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/missingReturnYieldStarFnUntraced.ts(4,5): error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
/.src/missingReturnYieldStarFnUntraced.ts(8,5): error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
/.src/missingReturnYieldStarFnUntraced.ts(11,69): error TS2769: No overload matches this call.


==== /.src/missingReturnYieldStarFnUntraced.ts (3 errors) ====
    import { Effect } from "effect"
    
    export const shouldComplainUntraced = Effect.fnUntraced(function*(){
        yield* Effect.fail("no") // <- should emit an error be return yield*
        ~~~~~
!!! error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
    })
    
    export const shouldComplainUntracedEager = Effect.fnUntracedEager(function*(){
        yield* Effect.fail("no") // <- should emit an error be return yield*
        ~~~~~
!!! error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
    })
    
    export const shouldNotComplainRegularFnUntraced = Effect.fnUntraced((a: string) => {
                                                                        ~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! related TS2771 /node_modules/effect/dist/Effect.d.ts(16688,9): The last overload is declared here.
        return Effect.fail(a)
    })
    
